# luks

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  _auto_config.sh  config.py  load_service.sh  luks.ini  luks.nginx  luks.service  ppmgr.sh  pyproject.toml  requirements.txt  run.py  run_debug.py  setup.cfg  setup.py  tox.ini  wsgi.py
luks/: __init__.py  _version.py  config.py  hosts.py  secrets.py
luks/api/: app.py  hosts.py  keys.py  main.py
luks/forms/: __init__.py  budget_analysis_form.py  keygen.py  search.py
luks/static/css/: forms.css  main.css
luks/templates/: 404.html  base.html  budget-analysis.html  chart.html  compare.html  hosts_table.html  index.html  invoice.html  invoices.html  key_detail.html  keygen.html  keygen_results.html  keys_table.html  render_datatable.html  select-mvb.html  select-mvm.html  test.html  upload.html
tests/: test_api.py  test_hosts.py  test_secrets.py
tests/mocks/: mock_hosts.py  mock_secrets.py
