[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "luks"
version = '0.3.1'
description = "Local key generation webapp"
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/luks'
packages = [
    { include = 'luks' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
diceware = {git = "https://github.com/barretobrock/diceware-ee.git"}
pukr = { git = "https://github.com/barretobrock/pukr.git", branch = "main" }
Flask = "^2.1.2"
Flask-WTF = "^1.0.1"
pykeepass = "^4.0.3"
requests = ">=2.25.1"
WTForms = "^3.0.1"
# Optional dependencies would go down here
# example = { version = ">=1.7.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
tox = "^3.24.5"

[tool.poetry.extras]
test = ["pytest"]
