[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "luks"
version = '0.4.2'
description = "Local key generation webapp"
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/luks'
packages = [
    { include = 'luks' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
diceware = {git = "https://github.com/barretobrock/diceware-ee.git"}
pukr = { git = "https://github.com/barretobrock/pukr.git", branch = "main" }
Flask = "^2"
Flask-WTF = "^1"
pykeepass = "^4"
requests = "^2.28"
WTForms = "^3"
# Optional dependencies would go down here
# example = { version = ">=1.7.0", optional = true }

[tool.poetry.dev-dependencies]
pre-commit = "^2"
pytest = "^7"
pytest-cov = "^3"
tox = "^3"

[tool.poetry.extras]
test = ["pytest"]

[tool.isort]
profile = 'black'
force_grid_wrap = 2
force_sort_within_sections = true
skip_gitignore = true
skip_glob = ['*_pb2.py', '*_pb2_grpc.py']
